fix: equal spacing for social buttons in contact modal

--- a/components/contactContent.module.css
+++ b/components/contactContent.module.css
@@ -30,8 +30,6 @@
   justify-content: space-between;
   align-items: center;
   border-radius: 6px;
-  margin-right: -0.45rem;
-  margin-left: 0.5rem;
 }
 .textButton:hover {
   background-color: var(--gray4);
@@ -55,6 +53,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 0.25rem;
 }
 .stack {
   display: flex;
@@ -69,9 +68,8 @@
   .stack {
     width: 100%;
   }
-  .textButton {
-    margin-left: -0.45rem;
-    margin-right: 0.5rem;
+  .flexRow {
+    margin-left: -0.5rem;
   }
   .row {
     flex-direction: column;
